# printplaat

./: .gitignore  CMakeLists.txt  README.md  build-apple-silicon  build-frontend  build-wrapper  dub.json  dub.selections.json  run-apple-silicon  svg-data.txt
backend/: app.d
doc/: components.md
frontend/: engine.cpp
gui_toolkit/: engine.cpp  engine.hpp  interface.cpp  properties.cpp  properties.hpp
rsc/components/: component.xcf
sdl_test/: a.out  build  main.c
sdl_wrapper/: engine.cpp  engine.hpp  interface.cpp  palette.cpp  palette.h  svg.cpp  svg.h
src/: app.d  components.d  palette.d  persistency.d
src/entities/: components.d  entity.d  wires.d
src/input/: delegates.d  field.d
